text insert 2/3 done

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 	--color-gray-dark-3: #9a9a9a;
 	--color-blue-dark-1: #00387f;
 	--color-tiffany: #00a6a6;
-	--profile-theme: #4682bf;
+	--profile-theme: #0E8388/*#4682bf*/;
 	--timeline-circle-theme: #14253e;
 	
 	--pgbar-length: 100%;
