--- a/style.css
+++ b/style.css
@@ -2,18 +2,32 @@
 	--color-gray-light-1: #f8f8f8;
 	--color-gray-light-2: #e9e9e9;
 	--color-gray-light-3: #dedede;
-	--color-gray-dark-1: #545454;
+	--color-gray-dark-1: #64748B/*#545454*/;
 	--color-gray-dark-2: #737373;
 	--color-gray-dark-3: #9a9a9a;
 	--color-blue-dark-1: #00387f;
 	--color-tiffany: #00a6a6;
-	--profile-theme: #0E8388/*#4682bf*/;
+	--color-black-dark-1: #334155;
+	--color-black-dark-2:#334155;
+	--color-light-label: #F1F5F9;
+	--color-dot1:#CBD5E1;
+	--profile-theme: #0E8388/*#0E8388#4682bf*/;
 	--timeline-circle-theme: #14253e;
 	
 	--pgbar-length: 100%;
 
 	--MATH-PI: 3.1415px;
 	--percent: 100;
+}
+
+ul {
+	padding: 0;
+	list-style-type: none;
+}
+
+.fa-square{
+	color:var(--color-dot1);
+	margin-right: 5px;
 }
 
 html {
@@ -71,14 +85,14 @@ body {
 	border-radius: 50%;
 }
 .bio .name {
-	font-size: 1.5rem;
+	font-size: 1.8rem;
 	text-align: center;
 	color: var(--color-gray-light-1);
 	margin: 0;
 	margin-top: 1rem;
 }
 .bio .profession {
-	font-size: 1rem;
+	font-size: 1.2rem;
 	text-align: center;
 	color: var(--color-gray-light-1);
 	margin: 0;
@@ -86,10 +100,11 @@ body {
 
 .intro-section {
 	padding: 0 1rem;
-	color: var(--color-gray-dark-1);
+	/* color: var(--color-gray-dark-1); */
+	color:var(--color-black-dark-1)
 }
 .intro-section .title {
-	font-size: 1rem;
+	font-size: 1.2rem;
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 1px;
@@ -141,6 +156,7 @@ body {
 	flex: 1 0 0;
 	background-color: white;
 	padding: 2rem;
+	color:var(--color-black-dark-2);
 }
 .detail:hover > .detail-section:not(:hover) {
 	opacity: 0.3;
@@ -163,6 +179,7 @@ body {
 .detail-section.edu > .detail-content {
 	padding-left: calc(1.5rem + 10px);
 }
+
 .title-icon + span {
 	font-size: 1.5rem;
 	transition: all 0.3s;
@@ -202,16 +219,17 @@ body {
 	margin-bottom: 1rem;	
 }
 .timeline-block h1 {
-	font-size: 1rem;
+	color:var(--color-black-dark-1);
+	font-size: 1.1rem;
 	margin: 5px 0;
 	transition: all 0.3s;
 }
 .timeline-block p {
-	font-size: 0.8rem;
+	font-size: 1rem;
 	margin: 5px 0;
 }
 .timeline-block time {
-	font-size: 0.8rem;
+	font-size: 1rem;
 	color: var(--color-gray-dark-2);
 }
 .timeline-block::before {
@@ -258,7 +276,7 @@ body {
 	background-color: var(--color-gray-dark-3);
 }
 .pg-list > li > span {
-	flex: 0 0 100px;
+	flex: 0 0 120px;
 }
 .sb-skeleton > .skillbar {
 	position: absolute;
@@ -355,13 +373,22 @@ body {
 	letter-spacing: 1px;
 }
 
+/*contact 이메일 부분*/
+.info-section-display{
+	display: block;
+}
+
+.info-section-display .icon-display{
+	margin-right: 15px;
+}
+
 @keyframes circle {
-  0% {
-    box-shadow: 0 0 0 0px rgba(51, 52, 57, 1);
-  }
-  100% {
-    box-shadow: 0 0 0 6px rgba(51, 52, 57, 0);
-  }
+	0% {
+		box-shadow: 0 0 0 0px rgba(51, 52, 57, 1);
+	}
+	100% {
+		box-shadow: 0 0 0 6px rgba(51, 52, 57, 0);
+	}
 }
 
 @media (max-width: 1024px) {
@@ -388,6 +415,14 @@ body {
 		width: 100px;
 		height: 100px;
 	}
+	.pg-skill .detail-content .detail-content-mid .low-name{
+		background-color: var(--color-light-label);
+		flex: 0 0 80px;
+		margin-right: 10px;
+	}
+	.info-section-display{
+		display: flex;
+	}
 }
 
 @media (max-width: 768px) {
@@ -408,4 +443,63 @@ body {
 	html {
 		font-size: 70%;
 	}
+	.pg-skill .detail-content .detail-content-mid .low-name{
+		background-color: var(--color-light-label);
+		flex: 0 0 50px;
+	}
 } 
+
+/***수정 부분***/
+/**/
+.pg-skill .detail-content .detail-content-mid{
+	margin-bottom: 1.2rem;
+}
+
+.pg-skill .detail-content .detail-content-mid .mid-name{
+	color: var(--color-gray-dark-1);
+	font-weight: 300;
+	font-size: 1rem;
+}
+
+.pg-skill .detail-content .detail-content-mid .low-name{
+	background-color: var(--color-light-label);
+	margin-right: 20px;
+}
+
+.pg-skill .detail-content .detail-content-mid span{
+	color: var(--color-gray-dark-1);
+	font-weight: 600;
+	font-size: 1rem;
+}
+
+.pg-skill .detail-content .detail-content-mid h1{
+	font-weight: 600;
+	font-size: 1.1rem;
+    margin: 5px 0;
+    transition: all 0.3s;
+	color:var(--color-black-dark-1)
+}
+
+.pg-skill .detail-content .detail-content-mid:hover h1{
+	color: var(--color-tiffany);
+}
+
+.detail-content-midname{
+	font-weight: 600;
+}
+
+.detail-content-date{
+	padding-right: 15px;
+}
+
+.detail-content-ul{
+	padding: 0 15px;
+}
+
+.style-bold{
+	font-weight: 600;
+}
+
+.non-bold{
+	font-weight: 500;
+}
