--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 	--color-gray-dark-2: #737373;
 	--color-gray-dark-3: #9a9a9a;
 	--color-blue-dark-1: #00387f;
-	--color-tiffany: #00a6a6;
+	--color-tiffany: rgba(119, 51, 255, 0.8) /*#00a6a6*/;
 	--color-black-dark-1: #334155;
 	--color-black-dark-2:#334155;
 	--color-light-label: #F1F5F9;
 	--color-dot1:#CBD5E1;
-	--profile-theme: #0E8388/*#0E8388#4682bf*/;
+	--profile-theme: rgba(119, 51, 255, 0.8);/*#0E8388#4682bf*/;
 	--timeline-circle-theme: #14253e;
 	
 	--pgbar-length: 100%;
@@ -144,10 +144,10 @@ body {
 	transform: translate(-50%, 0);
 }
 
-.link span:hover {
+.link .make_underline:hover {
 	color: var(--profile-theme);
 }
-.link span:hover::after {
+.link .make_underline:hover::after {
 	width: 100%;
 }
 
@@ -265,7 +265,7 @@ body {
 	list-style: none;
 }
 .pg-list > li {	
-	margin: 1rem 0;
+	margin: 1rem 0 0 0;
 	display: flex;
 	align-items: center;
 }
@@ -447,6 +447,9 @@ body {
 		background-color: var(--color-light-label);
 		flex: 0 0 50px;
 	}
+	.info-section-display{
+		display: block;
+	}
 } 
 
 /***수정 부분***/
@@ -502,4 +505,38 @@ body {
 
 .non-bold{
 	font-weight: 500;
+}
+
+.underline-link{
+	color:var(--color-black-dark-2);
+	text-decoration-line: underline;
+	text-decoration-thickness: 4px;
+	text-decoration-color: rgba(119, 51, 255, 0.18);
+}
+
+.underline-link:hover{
+	color: rgba(119, 51, 255, 0.7);
+}
+
+.stack-btn{
+	margin: 3px 0;
+	display: flex;
+}
+
+.stack-btn li{
+	font-weight: 600;
+	font-size: 0.9rem;
+	margin-right: 10px;
+	padding: 4px 7px;
+	border-radius: 5px;
+	color:var(--color-gray-dark-1)	;
+	background-color: var(--color-light-label);
+}
+
+ul > li{
+	padding-bottom: 0.2rem;
+}
+
+.margin-cut li{
+	margin-top: 0rem;
 }
