--- a/style.css
+++ b/style.css
@@ -30,8 +30,7 @@ li {
   margin: 5px 0px;
 }
 
-.mid-list{
-	
+.mid-list {
 }
 
 .fa-square {
@@ -594,4 +593,10 @@ ul > li {
   .pg-skill .detail-content .detail-content-mid {
     width: 100%;
   }
+}
+
+.code-style {
+  padding: 2px;
+  background-color: var(--color-gray-light-2);
+  border-radius: 5px;
 }
