feat: 2025.08.29. 포트폴리오 최신화

--- a/style.css
+++ b/style.css
@@ -595,8 +595,15 @@ ul > li {
   }
 }
 
+@media screen and (min-width: 1500px) {
+  .paragraph {
+    width: 13rem;
+  }
+}
+
 .code-style {
   padding: 2px;
   background-color: var(--color-gray-light-2);
   border-radius: 5px;
 }
+
